Fixed onPageNav spacings

--- a/website/custom.tailwind.css
+++ b/website/custom.tailwind.css
@@ -57,6 +57,7 @@
 
 .onPageNav {
   padding-top: 34px;
+  top: 168px !important;
 }
 
 .docMainWrapper .wrapper {
@@ -81,6 +82,10 @@
 @media screen and (min-width: 1024px) {
   .mainContainer {
     padding: 40px 0;
+  }
+
+  .onPageNav {
+    top: 90px !important;
   }
 
   .navPusher {
